--- a/.github/workflows/build-plugin.yml
+++ b/.github/workflows/build-plugin.yml
@@ -120,3 +120,52 @@ jobs:
         with:
           path: dist/*.vcvplugin
           name: mac-arm64
+
+  build-metamodule:
+    strategy:
+      matrix:
+        gcc: [ '12.3.Rel1' ]  # can add other versions if needed
+    name: "Build firmware on linux"
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Install Arm GNU Toolchain (arm-none-eabi-gcc)
+        uses: carlosperate/arm-none-eabi-gcc-action@v1
+        with:
+          release: ${{ matrix.gcc }}
+
+      - name: Install cmake
+        uses: jwlawson/actions-setup-cmake@v1.13
+        with:
+          cmake-version: '3.26.x'
+
+      - name: Git setup
+        run: git config --global --add safe.directory '*'
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+
+      - name: Install linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install ninja-build
+
+      - name: Set Release Version
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: FranzDiebold/github-env-vars-action@v2
+
+      - name: Build
+        run: |
+          cd metamodule
+          cmake -B build -G Ninja -DMETAMODULE_SDK_DIR=../metamodule-plugin-sdk -DINSTALL_DIR=${{ github.workspace }}/metamodule-plugins
+          cmake --build build
+          cd ${{ github.workspace }}/metamodule-plugins/
+          if [ "${{ inputs.plugin }}" == "./" ]; then for f in *.mmplugin; do mv $f ${f%.mmplugin}-${{ env.CI_REF_NAME }}.mmplugin; done; else for f in *.mmplugin; do mv $f ${{ env.CI_REF_NAME }}.mmplugin; done; fi
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: "Release: ${{ env.CI_REF_NAME }}"
+          files: |
+            metamodule-plugins/*.mmplugin
