--- a/.github/workflows/build-plugin.yml
+++ b/.github/workflows/build-plugin.yml
@@ -150,10 +150,15 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install ninja-build
+          sudo apt-get install inkscape
 
       - name: Set Release Version
         if: startsWith(github.ref, 'refs/tags/')
         uses: FranzDiebold/github-env-vars-action@v2
+
+      - name: Copy assets to folder
+        run: |
+          python3 metamodule-plugin-sdk/scripts/SvgToPng.py --input res --output metamodule/assets --white --height=240
 
       - name: Build
         run: |
