--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "metamodule-plugin-sdk"]
 	path = metamodule-plugin-sdk
 	url = https://github.com/4ms/metamodule-plugin-sdk
+	branch = v2.0-dev
