start the module

--- a/metamodule/CMakeLists.txt
+++ b/metamodule/CMakeLists.txt
@@ -21,6 +21,7 @@ target_sources(wildergarden
         ${SOURCE_DIR}/dimit.cpp
         ${SOURCE_DIR}/Pascal.cpp
         ${SOURCE_DIR}/plugin.cpp
+        ${SOURCE_DIR}/modmix.cpp
 )
 
 target_include_directories(wildergarden
